--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/projekt2
+url=jdbc:postgresql://95.31.250.137:5432/projekt2
 username=postgres
 password=postgres
