--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
       <version>6.1.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>9.21.0</version>
+    </dependency>
+
 
 
 
